# WalletWatcher

./: .gitignore  Cargo.toml  README.md  coins-sample.toml
src/: main.rs
src/templates/: block_address.html  block_coin.html  index.html
static/css/: style.css
systemd/: wallet_watcher.service
