[package]
name = "wallet_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
